RESOLVED FIXED285672
Fix more [alpha.webkit.UncountedCallArgsChecker] warnings
https://bugs.webkit.org/show_bug.cgi?id=285672
Summary Fix more [alpha.webkit.UncountedCallArgsChecker] warnings
Rob Buis
Reported 2025-01-09 04:23:11 PST
Fix more [alpha.webkit.UncountedCallArgsChecker] warnings.
Attachments
Rob Buis
Comment 1 2025-01-09 04:25:52 PST
EWS
Comment 2 2025-01-10 06:07:15 PST
Committed 288702@main (8fe77d90c97b): <https://commits.webkit.org/288702@main> Reviewed commits have been landed. Closing PR #38779 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-10 06:08:13 PST
Note You need to log in before you can comment on or make changes to this bug.