Fix more [alpha.webkit.UncountedCallArgsChecker] warnings https://bugs.webkit.org/show_bug.cgi?id=285672

Reviewed by Chris Dumez and Abrar Rahman Protyasha.

Fix more [alpha.webkit.UncountedCallArgsChecker] warnings by
using protectedThis in more places.

* Source/WebCore/Modules/cookie-store/CookieStore.cpp:
(WebCore::CookieStore::MainThreadBridge::get):
(WebCore::CookieStore::MainThreadBridge::getAll):
* Source/WebCore/Modules/filesystemaccess/FileSystemDirectoryHandle.cpp:
(WebCore::FileSystemDirectoryHandleIterator::next):
(WebCore::FileSystemDirectoryHandleIterator::advance):
* Source/WebCore/Modules/mediastream/RTCDTMFSender.cpp:
(WebCore::RTCDTMFSender::insertDTMF):
* Source/WebCore/Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::PaymentRequest::shippingAddressChanged):
(WebCore::PaymentRequest::shippingOptionChanged):
(WebCore::PaymentRequest::paymentMethodChanged):
(WebCore::PaymentRequest::updateWith):
(WebCore::PaymentRequest::completeMerchantValidation):
(WebCore::PaymentRequest::whenDetailsSettled):
* Source/WebCore/Modules/push-api/PushManager.cpp:
(WebCore::PushManager::subscribe):
(WebCore::PushManager::getSubscription):
* Source/WebCore/Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::startRendering):
(WebCore::AudioContext::mayResumePlayback):
(WebCore::AudioContext::suspendPlayback):
* Source/WebCore/Modules/webaudio/AudioWorkletMessagingProxy.cpp:
(WebCore::AudioWorkletMessagingProxy::postTaskToAudioWorklet):
* Source/WebCore/SaferCPPExpectations/UncountedLambdaCapturesCheckerExpectations:
* Source/WebCore/workers/service/FetchEvent.cpp:
(WebCore::FetchEvent::respondWith):

Canonical link: https://commits.webkit.org/288702@main